--- a/packages/simpleauth/package.json
+++ b/packages/simpleauth/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "description": "The Simple Auth is a backend service helping Teams tab app access first/third party services from client side.",
   "scripts": {
-    "version": "node ../../.github/scripts/update-simpleauth-ver.js && git add ."
+    "version": "../../.github/scripts/pkg-version.sh fx-core && git add .",
+    "postversion": "../../.github/scripts/pkg-postversion.sh fx-core && git add ."
   },
   "private": "true",
   "license": "MIT",
   "devDependencies": {
+    "fs-extra": "^10.0.0",
+    "semver": "^7.3.5",
     "xml2js": "^0.4.23"
   }
 }
