feat(dotnet-sdk): add .NET SDK package (#2031)
* feat(dotnet-sdk): add NuGet package

* chore(dotnet-sdk): update docs

* chore(dotnet-sdk): add code owner

* docs(dotnet-sdk): fix naming

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -83,4 +83,6 @@
 
 /packages/function-extension @adashen @blackchoey @dilin-MS
 
+/packages/dotnet-sdk @tecton @jiayi-ruan @JerryYangKai
+
 /.github/workflows/cd.yml @adashen @LongOddCode @IvanJobs @qinezh @wenytang-ms
