--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,6 +19,7 @@
     "prebuild": "npx json2ts --input src/schemas/envConfig.json --output src/schemas/envConfig.ts",
     "build": "tsc -p ./ && npx api-extractor run --local",
     "build:api-markdown": "npm run build && rimraf ../../docs/api && npx api-documenter markdown -i temp -o ../../docs/api",
+    "postbuild": "npx cpy src/schemas/*.json build/schemas/",
     "prepare": "npm run build",
     "lint:fix": "eslint \"src/**/*.ts\" \"tests/**/*.ts\" --fix",
     "doc": "typedoc",
@@ -42,6 +43,7 @@
     "@typescript-eslint/parser": "^4.19.0",
     "chai-as-promised": "^7.1.1",
     "chai-spies": "^1.0.0",
+    "cpy-cli": "^3.1.1",
     "eslint": "^7.22.0",
     "json-schema-to-typescript": "^10.1.4",
     "lint-staged": "^10.5.4",
