--- a/.github/workflows/dotnetsdk-ci.yml
+++ b/.github/workflows/dotnetsdk-ci.yml
@@ -28,7 +28,7 @@ jobs:
         dotnet-version: 5.x
     - name: Build
       run: 
-        dotnet build -c Release -p:WebDriverPlatform=linux64 Microsoft.TeamsFx.sln
+        dotnet build -c Release Microsoft.TeamsFx.sln
     - name: Test
       run:
         dotnet test Microsoft.TeamsFx.sln
