--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -482,7 +482,7 @@
         "properties": {
           "fx-extension.armSupportEnabled": {
             "type": "boolean",
-            "description": "Whether enable ARM support feaure. (Requires reload of VS Code)",
+            "description": "Enable provision Azure resources with ARM templates. (Requires reload of VS Code)",
             "default": false
           },
           "fx-extension.validateNode": {
