--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -480,6 +480,11 @@
       {
         "title": "Teams Toolkit",
         "properties": {
+          "fx-extension.armSupportEnabled": {
+            "type": "boolean",
+            "description": "Enable provision Azure resources with ARM templates. (Requires reload of VS Code)",
+            "default": false
+          },
           "fx-extension.validateNode": {
             "type": "boolean",
             "description": "Ensure Node.js is installed.",
