chore(env checker): set validateBicep dafault to false

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -503,7 +503,7 @@
           "fx-extension.validateBicep": {
             "type": "boolean",
             "description": "Ensure Bicep CLI is installed.",
-            "default": true
+            "default": false
           },
           "fx-extension.stopTeamsToolkitTasksPostDebug": {
             "type": "boolean",
