--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -531,6 +531,7 @@
     "copy-test-files": "copyfiles -u 1 test/**/*.ps1 test/**/*.sh out/test/",
     "compile": "tsc -p ./ && npm run copy-files",
     "build": "rimraf out && npm run compile",
+    "build-webpack": "rimraf out && webpack --mode development --config ./webpack.config.js",
     "build-failpoint": "rimraf out && npx ttsc -p ./",
     "watch": "webpack --watch --devtool nosources-source-map --info-verbosity verbose --config ./webpack.config.js",
     "package": "rimraf out && webpack --mode production --config ./webpack.config.js",
@@ -575,6 +576,7 @@
     "@types/underscore": "^1.11.0",
     "@types/uuid": "^8.3.0",
     "@types/vscode": "^1.51.0",
+    "@vscode/codicons": "0.0.21",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "adm-zip": "^0.5.4",
