--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -153,6 +153,11 @@
           "when": "view == teamsfx-environment && viewItem == environment"
         },
         {
+          "command": "fx-extension.viewEnvironmentWithIcon",
+          "when": "view == teamsfx-environment && viewItem == environment",
+          "group": "inline@3"
+        },
+        {
           "command": "fx-extension.activateEnvironment",
           "when": "view == teamsfx-environment && viewItem == environment"
         }
@@ -328,6 +333,12 @@
       {
         "command": "fx-extension.viewEnvironment",
         "title": "View environment",
+        "enablement": "fx-extension.isMultiEnvEnabled"
+      },
+      {
+        "command": "fx-extension.viewEnvironmentWithIcon",
+        "title": "View environment",
+        "icon": "$(open-preview)",
         "enablement": "fx-extension.isMultiEnvEnabled"
       },
       {
