chore: support key vault setup env

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -16,7 +16,6 @@ jobs:
       M365_ACCOUNT_NAME: ${{ secrets.TEST_USER_NAME }}
       M365_ACCOUNT_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
       M365_TENANT_ID: ${{ secrets.TEST_TENANT_ID_2 }}
-      M365_ACCOUNT_COLLABORATOR: ${{ secrets.TEST_COLLABORATOR_USER_NAME }}
       CI_ENABLED: "true"
 
     runs-on: [self-hosted, linux, 8cpu]
@@ -28,6 +27,13 @@ jobs:
           token: ${{ secrets.CD_PAT }}
           ref: ${{ github.ref }}
           clean: false
+
+      - name: setup env
+        env:
+          creds: ${{ secrets.AZURE_TEST_CREDENTIALS }}
+        run: |
+          bash setup-testing-env.sh E2E-TEST-COLLABORATOR-USER-NAME
+        working-directory: .github/workflows/scripts
 
       - name: Setup node
         uses: actions/setup-node@v2.1.2
