--- a/packages/dotnet-sdk/.gitignore
+++ b/packages/dotnet-sdk/.gitignore
@@ -3,6 +3,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+src/TeamsFx/wwwroot/teamsfx.js
+
 # User-specific files
 *.rsuser
 *.suo
