--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -29,10 +29,12 @@ jobs:
           clean: false
 
       - name: setup env
+        id: keyvault
         env:
           creds: ${{ secrets.AZURE_TEST_CREDENTIALS }}
         run: |
-          bash setup-testing-env.sh E2E-TEST-COLLABORATOR-USER-NAME
+          output=$(bash setup-testing-env.sh E2E-TEST-COLLABORATOR-USER-NAME)
+          echo "::set-output name=M365_ACCOUNT_COLLABORATOR::$output"
         working-directory: .github/scripts
 
       - name: Setup node
@@ -72,6 +74,8 @@ jobs:
           npx lerna run test:e2e:clean
 
       - name: E2E Test in Parallel
+        env: 
+          M365_ACCOUNT_COLLABORATOR: ${{ steps.version-change.outputs.M365_ACCOUNT_COLLABORATOR }}
         run: |
           npx lerna run test:e2e:parallel
 
