test(collaboration): add e2e test for remote collaboration and fix bugs (#2092)
* test(collaboration): add test for remote collaboration and fix bugs

* test(collaboration): update test

* fix: fix test for guest user

* fix: fix comments

* fix: fix null userPrincipalName

* chore: support key vault setup env

* chore: update

* chore: env

* chore: add code owner

* fix: fix comment

Co-authored-by: wenytang-ms <wenyutang@microsoft.com>
Co-authored-by: wenytang-ms-123 <wenytang@wenytang.onmicrosoft.com>

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -28,6 +28,15 @@ jobs:
           ref: ${{ github.ref }}
           clean: false
 
+      - name: setup env
+        id: keyvault
+        env:
+          creds: ${{ secrets.AZURE_TEST_CREDENTIALS }}
+        run: |
+          output=$(bash setup-testing-env.sh E2E-TEST-COLLABORATOR-USER-NAME)
+          echo "::set-output name=M365_ACCOUNT_COLLABORATOR::$output"
+        working-directory: .github/scripts
+
       - name: Setup node
         uses: actions/setup-node@v2.1.2
         with:
@@ -65,6 +74,8 @@ jobs:
           npx lerna run test:e2e:clean
 
       - name: E2E Test in Parallel
+        env: 
+          M365_ACCOUNT_COLLABORATOR: ${{ steps.version-change.outputs.M365_ACCOUNT_COLLABORATOR }}
         run: |
           npx lerna run test:e2e:parallel
 
