--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -41,7 +41,7 @@ jobs:
           retry_on: error
           shell: pwsh
           command: |
-            ./.github/scripts/downloadSimpleAuth.ps1
+            ./.github/scripts/download-simpleauth.sh
 
       - name: Setup project
         uses: nick-invision/retry@v2
