chore: update download simpleauth script (#2148)
* chore: update download simpleauth script

* chore: udpate

* chore: udpate

Co-authored-by: wenytang-ms-123 <wenytang@wenytang.onmicrosoft.com>

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -50,7 +50,7 @@ jobs:
           retry_on: error
           shell: pwsh
           command: |
-            ./.github/scripts/downloadSimpleAuth.ps1
+            ./.github/scripts/download-simpleauth.sh
 
       - name: Setup project
         uses: nick-invision/retry@v2
