feat: update UX

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -82,7 +82,7 @@
     "viewsWelcome": [
       {
         "view": "teamsfx-empty-project",
-        "contents": "To start Teams app development, create a new Teams app or explore our samples. For more information, read [documentation](https://docs.microsoft.com/en-us/microsoftteams/platform/get-started/first-app-react?tabs=vscode).\n[Create a new Teams app](command:fx-extension.create)\n[View samples](command:fx-extension.openSamples)\n\n\n\n\n\nYou can also open an existing Teams app.\n[Open folder](command:vscode.openFolder)"
+        "contents": "To start Teams app development experience, create a new Teams app or explore our samples. For more information visit our [documentation](https://docs.microsoft.com/en-us/microsoftteams/platform/get-started/first-app-react?tabs=vscode).\n[Create a new Teams app](command:fx-extension.create)\n[View samples](command:fx-extension.openSamples)\n\n\n\n\n\nYou can also open an existing Teams app.\n[Open folder](command:vscode.openFolder)"
       }
     ],
     "views": {
@@ -114,7 +114,7 @@
         },
         {
           "id": "teamsfx-empty-project",
-          "name": "NO PROJECT CREATED",
+          "name": "Teams Toolkit",
           "when": "fx-extension.sidebarWelcome"
         }
       ]
