fix: update active env

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -357,7 +357,7 @@
       {
         "command": "fx-extension.viewEnvironmentWithIcon",
         "title": "View environment",
-        "icon": "$(open-preview)",
+        "icon": "$(file-symlink-directory)",
         "enablement": "fx-extension.isMultiEnvEnabled"
       },
       {
