fix: add activate logic (#2105)
* fix: add activate logic

* fix: add env test case

* fix: add create env message

* fix: update create and activate env ui

* fix: remove create env from provision

* fix: add switch env

* fix: add activate env icon

* fix: pr comments

* fix: unit test

* fix: no env provision modal

* fix: update active env

* fix: pr comments

* fix: command palette

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -173,8 +173,18 @@
           "when": "view == teamsfx-environment && viewItem == environment"
         },
         {
+          "command": "fx-extension.viewEnvironmentWithIcon",
+          "when": "view == teamsfx-environment && viewItem == environment",
+          "group": "inline@3"
+        },
+        {
           "command": "fx-extension.activateEnvironment",
           "when": "view == teamsfx-environment && viewItem == environment"
+        },
+        {
+          "command": "fx-extension.activateEnvironmentWithIcon",
+          "when": "view == teamsfx-environment && viewItem == environment",
+          "group": "inline@3"
         }
       ],
       "editor/title/run": [
@@ -220,6 +230,26 @@
         {
           "command": "fx-extension.migrateV1Project",
           "when": "fx-extension.v1Project"
+        },
+        {
+          "command": "fx-extension.addEnvironment",
+          "when": "false"
+        },
+        {
+          "command": "fx-extension.viewEnvironment",
+          "when": "false"
+        },
+        {
+          "command": "fx-extension.viewEnvironmentWithIcon",
+          "when": "false"
+        },
+        {
+          "command": "fx-extension.activateEnvironment",
+          "when": "false"
+        },
+        {
+          "command": "fx-extension.activateEnvironmentWithIcon",
+          "when": "false"
         }
       ]
     },
@@ -360,8 +390,20 @@
         "enablement": "fx-extension.isMultiEnvEnabled"
       },
       {
+        "command": "fx-extension.viewEnvironmentWithIcon",
+        "title": "View environment",
+        "icon": "$(file-symlink-directory)",
+        "enablement": "fx-extension.isMultiEnvEnabled"
+      },
+      {
         "command": "fx-extension.activateEnvironment",
         "title": "Activate environment",
+        "enablement": "fx-extension.isMultiEnvEnabled"
+      },
+      {
+        "command": "fx-extension.activateEnvironmentWithIcon",
+        "title": "Activate environment",
+        "icon": "$(check)",
         "enablement": "fx-extension.isMultiEnvEnabled"
       }
     ],
