--- a/.github/workflows/FunctionExtensionCI.yml
+++ b/.github/workflows/FunctionExtensionCI.yml
@@ -3,45 +3,39 @@ name: FunctionExtension CI
 on:
   push:
     paths:
-    - 'packages/function-extension/**'
-    branches: [ main ]
+      - "packages/function-extension/**"
+    branches: [main]
   pull_request:
     paths:
-      - 'packages/function-extension/**'
+      - "packages/function-extension/**"
   workflow_dispatch:
 
 defaults:
   run:
     working-directory: packages/function-extension/
 
-jobs:  
+jobs:
   Function-Extension:
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.x
-    - name: Install Func CLI
-      run: 
-        wget -q https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb && sudo dpkg -i packages-microsoft-prod.deb &&
-        sudo apt-get update && sudo apt-get install azure-functions-core-tools-3
-    - name: Build
-      run: 
-        dotnet build -c Release Microsoft.Azure.WebJobs.Extensions.TeamsFx.sln 
-    - name: Pack
-      run: 
-        dotnet pack -c Release ./src/Microsoft.Azure.WebJobs.Extensions.TeamsFx.csproj
-    - name: Test
-      env: 
-        TeamsFx_BINDING_IntegrationTestSettings__ClientId: 4c7c4582-ac3d-4097-97bb-f818a91b60d9
-        TeamsFx_BINDING_IntegrationTestSettings__ClientSecret: ${{secrets.FUNCTION_EXTENSION_CLIENT_SECRET}}
-        TeamsFx_BINDING_IntegrationTestSettings__UnauthorizedAadAppClientId: 079ba771-5807-4eb9-bb7a-51e6e2f088f3
-        TeamsFx_BINDING_IntegrationTestSettings__UnauthorizedAadAppClientSecret: ${{secrets.FUNCTION_EXTENSION_UNAUTHORIZED_AAD_APP_CLIENT_SECRET}}
-        TeamsFx_BINDING_IntegrationTestSettings__AllowedAppClientId: 6c7b6e6f-242a-42d0-ae07-823434beb336
-        TeamsFx_BINDING_IntegrationTestSettings__AllowedAppClientSecret: ${{secrets.FUNCTION_EXTENSION_ALLOWED_APP_SECRET}}
-        TeamsFx_BINDING_IntegrationTestSettings__AuthorityHost: https://login.microsoftonline.com
-        TeamsFx_BINDING_IntegrationTestSettings__TenantId: 546a2d59-2038-4a68-acff-f0239a409516
-      run:
-        chmod +x "scripts/test.sh" && chmod +x "scripts/start_js_function.sh" && "scripts/test.sh"
+      - uses: actions/checkout@v2
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1.x
+      - name: Install Func CLI
+        run:
+          wget -q https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb && sudo dpkg -i packages-microsoft-prod.deb &&
+          sudo apt-get update && sudo apt-get install azure-functions-core-tools-3
+      - name: Build
+        run: dotnet build -c Release Microsoft.Azure.WebJobs.Extensions.TeamsFx.sln
+      - name: Pack
+        run: dotnet pack -c Release ./src/Microsoft.Azure.WebJobs.Extensions.TeamsFx.csproj
+      - name: setup env
+        env:
+          creds: ${{ secrets.AZURE_TEST_CREDENTIALS }}
+        run: |
+          bash setup-testing-env.sh function-extension $GITHUB_ENV
+        working-directory: .github/scripts
+      - name: Test
+        run: chmod +x "scripts/test.sh" && chmod +x "scripts/start_js_function.sh" && "scripts/test.sh"
