chore: update create-milestone

--- a/.github/workflows/create-milestone.yml
+++ b/.github/workflows/create-milestone.yml
@@ -25,4 +25,4 @@ jobs:
           milestone-prefix: CY
           milestone-days: 14
           advanced-days: 5
-          token: ${{secrets.TEAMSFX_BOT}}
+          token: ${{secrets.GITHUB_TOKEN}}
