--- a/.github/workflows/create-milestone.yml
+++ b/.github/workflows/create-milestone.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           milestone-prefix: CY
           milestone-days: 14
-          advanced-days: 5
-          token: ${{secrets.TEAMSFX_BOT}}
+          advanced-days: 3
+          token: ${{secrets.GITHUB_TOKEN}}
