--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-    "name": "teamsfx",
-    "scripts": {
-        "setup": "npm install && npm run bootstrap --hoist",
-        "setup-failpoint": "npm run setup && npx lerna run build-failpoint",
-        "bootstrap": "lerna bootstrap",
-        "lint:staged": "lerna run lint:staged --stream",
-        "lint": "lerna run lint --stream",
-        "manual-version:rc": "lerna version --preid=rc --no-push --no-changelog --no-private --ignore-scripts",
-        "prepare": "husky install"
-    },
-    "devDependencies": {
-        "@commitlint/cli": "^12.0.1",
-        "@commitlint/config-conventional": "^12.0.1",
-        "lerna": "^4.0.0",
-        "husky": "^6.0.0"
-    },
-    "bin": {
-        "teamsfx": "./packages/cli/cli.js"
-    }
+  "name": "teamsfx",
+  "scripts": {
+    "setup": "npm install && npm run bootstrap --hoist",
+    "setup-failpoint": "npm run setup && npx lerna run build-failpoint",
+    "bootstrap": "lerna bootstrap",
+    "lint:staged": "lerna run lint:staged --stream",
+    "lint": "lerna run lint --stream",
+    "manual-version:rc": "lerna version --preid=rc --no-push --no-changelog --no-private --ignore-scripts",
+    "prepare": "husky install"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
+    "@types/fs-extra": "^9.0.12",
+    "@types/node": "^16.7.10",
+    "@types/semver": "^7.3.8",
+    "axios": "^0.21.3",
+    "dotenv": "^10.0.0",
+    "husky": "^6.0.0",
+    "lerna": "^4.0.0"
+  },
+  "bin": {
+    "teamsfx": "./packages/cli/cli.js"
+  }
 }
