--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -117,10 +117,10 @@ jobs:
             npm run setup
 
       - name: report cli e2e tests stat
-        working-directory: packages/cli
         run: |
+          manual_cases=`npx ts-node .github/scripts/testPlan.ts stat cli | jq '.points'`
+          cd packages/cli
           auto_cases=`npx mocha --require ts-node/register --dry-run tests/e2e/**/*.tests.ts | grep passing | awk '{print $1}'`
-          manual_cases=`npx ts-node ../../.github/scripts/testPlan.ts stat cli | jq '.points'`
           pct=`printf %.4f "$((10**4 * $auto_cases*100/$manual_cases))e-4"`
 
           az storage entity insert \
