--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "axios": "^0.21.3",
     "dotenv": "^10.0.0",
     "husky": "^6.0.0",
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2"
   },
   "bin": {
     "teamsfx": "./packages/cli/cli.js"
